openshift fixes, add menu style

--- a/javafutbolee-web/src/main/webapp/assets/less/_custom.less
+++ b/javafutbolee-web/src/main/webapp/assets/less/_custom.less
@@ -257,6 +257,11 @@ p.site-description {
 
 
 /* INTRO */
+h1.intro {
+	font-size: 3.75rem;
+	line-height: 5rem;
+	text-align: center;
+}
 .intro-section {
     margin-top: 130px;
     text-align: center;
@@ -633,3 +638,6 @@ p.site-description {
         height: auto;
     }
 }
+
+
+/**NAV**/
